--- a/4주차/transfer_learning_tutorial_ipynb.ipynb
+++ b/4주차/transfer_learning_tutorial_ipynb.ipynb
@@ -930,7 +930,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **최적화 알고리즘 변경: SGD->Adam**"
+        "# **최적화 알고리즘이 Adam인 경우**"
       ],
       "metadata": {
         "id": "Y6lVBD0tAhzt"
@@ -1176,6 +1176,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **SGD일 때**"
+      ],
+      "metadata": {
+        "id": "S-Q1krPzSU32"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "model_conv = torchvision.models.resnet18(weights='IMAGENET1K_V1')\n",
@@ -1245,12 +1254,12 @@
         "model_conv = train_model(model_conv, criterion, optimizer_conv,exp_lr_scheduler, num_epochs=25)"
       ],
       "metadata": {
-        "id": "iAddz_awQ0kx",
-        "outputId": "785553f0-f22e-4875-fdb2-2433b2099c77",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "iAddz_awQ0kx",
+        "outputId": "785553f0-f22e-4875-fdb2-2433b2099c77"
       },
       "execution_count": 49,
       "outputs": [
